# cusadi

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  __init__.py  cmake_test.py  compile_torch.py  requirements.txt  run_benchmarks.py  run_codegen.py  run_cusadi_function_test.py  setup.py  setup.sh  test.casadi  test.py
backup/cpp/cusadi/: comparison.py  comparison_vector.py  evaluateCasADiPython.py  setup.py
backup/cpp/example/: comparison.py  lltm.cpp  lltm_cuda.cpp  setup.py
backup/cuda/: compilation  cuBLAS_bindings.py  cuBLAS_example.cu  evaluateCasADiPython.py  evaluate_casadi_function.c
backup/cuda/src/: main.c
backup/jax/: jax_to_test.py
backup/python/: compare_device.py  test.py  test_batched.py  test_hashed.py  test_slicing.py  test_torch_autgrad.py  test_torch_compile.py
codegen/: .gitignore  benchmark_general.c  benchmark_general.h
cpp/cusadi/: cuda_operations.cu  lltm.cpp  lltm_cuda.cpp  lltm_cuda_kernel.cu  setup_cuda.py
cpp/example/: lltm_cuda_kernel.cu
cuda/: CMakeLists.txt  cmake_test.py  cuBLAS_example.c  test.py  test_cuda.py
cusadi/: CusadiFunction.py  CusadiOperations.py  __init__.py  generateCUDACode.py  generatePytorchCode.py
cusadi/benchmark_functions/: __init__.py  compile_commands.md  fn_1e2.casadi  fn_1e3.casadi  fn_1e4.casadi
cusadi/casadi_functions/: .gitignore
examples/: cartpole_LQR.py  humanoid_SRBM_MPC.py  planar_drone_LQR.py  planar_drone_ROA.py  test.py
figures/: plot_benchmarking.m
include/: cusadi_operations.cuh  main.h
plotting/: .gitignore  patchline.m  plot_benchmarking.m  plot_drone_LQR.m  plot_drone_ROA.m
python/: CusadiFunction.py  CusadiFunction_orig.py  benchmark_cusadi.py  codegen.py  codegen_orig.py  eval_casadi.py  g_casadi.casadi  parallel_map_example.py  parallel_qp.py  test.casadi  test_codegen_evaluation.py  test_cusadi_function.py
python/test/: test_cusadi_function.py
scripts/: CusadiFunction.py  benchmark.py  codegen.py
scripts/test/: .gitignore  test_cusadi_function.py
src/: CusadiFunction.py  CusadiOperations.py  __init__.py  codegen_prototype.cu  codegen_prototype_orig.cu  cuda_operation_backup.cu  cuda_operations.cu  cusadi_operations.cu  generateCUDACode.py  generatePytorchCode.py  main.c  test.cu
src/benchmark_functions/: .gitignore  compile_commands.md  evaluateWithPytorch.py  evaluate_parallel_cpu  evaluate_parallel_cpu.cpp  evaluate_parallel_cpu_transfer  evaluate_serial_cpu  evaluate_serial_cpu.cpp  evaluate_serial_cpu_transfer  fn_1e1.casadi  test.py  test_map.py
src/casadi_functions/: ReadMe_manual.m
temp/: CusadiFunction.py  __init__.py
temp/test/: test.casadi  test_cusadi_function.py
